--- a/main.html
+++ b/main.html
@@ -11,16 +11,22 @@
 <body>
 
 	<div class="main">
-		
+
 		<div class="ryu">
   			<div class="ryu-still"></div>
  			<div class="ryu-ready"></div>
   			<div class="ryu-throwing"></div>
+  			<div class="ryu-cool"></div>
 		</div>
 		
 		<div class="hadouken">
 		</div>
 	
+		<div class="description">
+		<p>Click on Ryu to make him throw a Hadouken.</p>
+		<p>Press and hold down the "x" key to make him strike his cool pose!</p>
+		</div>
+
 	</div>
 
 	<audio id="hadouken-sound" src="sound/hadouken.mp3">
